package com.maksimowiczm.findmyip.ui.page.settings.backgroundservices

object BackgroundServicesPageTestTags {
    const val GO_BACK_BUTTON = "back_button"
    const val CONTENT = "background_services_content"
    const val FOREGROUND_SERVICE_SETTING = "foreground_service_surface"
    const val PERIODIC_WORK_SETTING = "periodic_work_surface"
    const val TIPS = "tips"
}
